Closed Bug 1694008 Opened 4 years ago Closed 4 years ago

startup Crash in [@ XREMain::XRE_mainRun]

Categories

(Thunderbird :: General, defect)

x86
Windows 10
defect

Tracking

(thunderbird_esr78 fixed, thunderbird88 fixed)

RESOLVED FIXED
88 Branch
Tracking Status
thunderbird_esr78 --- fixed
thunderbird88 --- fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

A mix of 64 and 32 bit

A high percentages of crashes are 0-14 seconds

bp-9336d7f3-8a8c-4e4f-ac0e-cd6c30210220
bp-e8143697-5fdb-4703-a677-1cb690210219
bp-ed49ba2c-5d19-4065-bf72-f9a290210220

This are not startup crashes ...

Crash report: https://crash-stats.mozilla.org/report/index/c33cc822-68f1-42bc-a217-877be0201207

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll XREMain::XRE_mainRun toolkit/xre/nsAppRunner.cpp:4464
1 xul.dll XREMain::XRE_main toolkit/xre/nsAppRunner.cpp:4812
2 xul.dll XRE_main toolkit/xre/nsAppRunner.cpp:4866
3 xul.dll mozilla::BootstrapImpl::XRE_main toolkit/xre/Bootstrap.cpp:45
4 thunderbird.exe NS_internal_main comm/mail/app/nsMailApp.cpp:324
5 thunderbird.exe wmain toolkit/xre/nsWindowsWMain.cpp:131
6 thunderbird.exe __scrt_common_main_seh /builds/worker/workspace/obj-build/comm/mail/app/f:/dd/vctools/crt/vcstartup/src/startup/exe_common.inl:288
7 kernel32.dll BaseThreadInitThunk 
8 ntdll.dll _RtlUserThreadStart 
9 ntdll.dll _RtlUserThreadStart 

bp-fd8ea48f-eefb-4aed-8f98-290bd0210123
bp-199a79d5-b416-4d99-97a6-f0cdc0210124

Flags: needinfo?(mkmelin+mozilla)

The crash is at https://hg.mozilla.org/releases/mozilla-esr78/file/tip/toolkit/xre/nsAppRunner.cpp#l4464 , so it's definitely startup crash even if the uptime say something else. Looks like an obvious problem though (db is null). Why it would happen is more difficult to say.

Assignee: nobody → mkmelin+mozilla
Flags: needinfo?(mkmelin+mozilla)
Status: NEW → ASSIGNED

You reported this earlier than the commit from bug 1559448, so it cannot be a regression from bug 1559448

See Also: → 1559448

Yes the code moved, but I'm assuming the null check would be needed in the new location as well.

Pushed by mkmelin@iki.fi: https://hg.mozilla.org/integration/autoland/rev/027cc5c8b2b6 add null check for getting nsIPK11TokenDB service (to prevent crash). r=kaie,sg DONTBUILD
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch

Comment on attachment 9210253 [details]
Bug 1694008 - add null check for getting nsIPK11TokenDB service (to prevent crash). r=kaie,#xpcom-reviewers!

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: crash fix
  • User impact if declined: may crash
  • Fix Landed on Version: 88
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just adding a null check. This is ifdef Thunderbird code, so Firefox is not affected.
  • String or UUID changes made by this patch: none
Attachment #9210253 - Flags: approval-mozilla-esr78?

Comment on attachment 9210253 [details]
Bug 1694008 - add null check for getting nsIPK11TokenDB service (to prevent crash). r=kaie,#xpcom-reviewers!

Approved for 78.11esr.

Attachment #9210253 - Flags: approval-mozilla-esr78? → approval-mozilla-esr78+

Comment on attachment 9210253 [details]
Bug 1694008 - add null check for getting nsIPK11TokenDB service (to prevent crash). r=kaie,#xpcom-reviewers!

Sorry, this depends on bug 1559448 being uplifted to ESR first. Leaving this up for nomination until then.

Attachment #9210253 - Flags: approval-mozilla-esr78+ → approval-mozilla-esr78?

Comment on attachment 9210253 [details]
Bug 1694008 - add null check for getting nsIPK11TokenDB service (to prevent crash). r=kaie,#xpcom-reviewers!

TB-only, approved for 78.11esr.

Attachment #9210253 - Flags: approval-mozilla-esr78? → approval-mozilla-esr78+

Comment on attachment 9210253 [details]
Bug 1694008 - add null check for getting nsIPK11TokenDB service (to prevent crash). r=kaie,#xpcom-reviewers!

Clearing the esr78 approval flag to get this off the needs-uplift radar.

Attachment #9210253 - Flags: approval-mozilla-esr78+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: