Bug 1694008 - add null check for getting nsIPK11TokenDB service (to prevent crash). r=kaie,sg DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D109055